# owl

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  flake.nix
.claude/: settings.json
.github/workflows/: ci.yml
docs/: checklist.md  design.md  requirements.md  test.md  todo.md
docs/fix/: issue-14-glib-networking-tls.md
nix/: rust.nix
src/: command.rs  hints.rs  input.rs  keys.rs  main.rs  page.js  webview.rs  window.rs
